--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -185,7 +185,7 @@ target_compile_definitions(
     -DPICO_VERSION_MAJOR=${GITVERSION_VAR_VERSION_MAJOR}
     -DPICO_VERSION_MINOR=${GITVERSION_VAR_VERSION_MINOR}
     -DPICO_VERSION_PATCH=${GITVERSION_VAR_VERSION_PATCH}
-
+    -DWITH_QT=OFF
     -DPICO_WX_GIT_COMMITISH=${PICO_WX_GIT_COMMITISH}
 )
 
